@@ -5,7 +5,8 @@ Changelog
 2.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Move extend_query_with_textfilter functionality to a separte method.
+  [phgross]
 
 
 2.1.0 (2015-03-12)
